--- a/WabiSabiTeamProject/Feature/Summary/View/SummaryAwards/SummaryAwardsTableViewCell.xib
+++ b/WabiSabiTeamProject/Feature/Summary/View/SummaryAwards/SummaryAwardsTableViewCell.xib
@@ -5,33 +5,68 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryAwardsTableViewCell" rowHeight="190" id="KGk-i7-Jjw" customClass="SummaryAwardsTableViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryAwardsTableViewCell" rowHeight="214" id="KGk-i7-Jjw" customClass="SummaryAwardsTableViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="214"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="214"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Awards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbk-tI-luA">
-                        <rect key="frame" x="10" y="10" width="300" height="23.5"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Awards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbk-tI-luA">
+                        <rect key="frame" x="10" y="10" width="216.5" height="34"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="x1w-Ja-PeH">
+                        <rect key="frame" x="10" y="54" width="300" height="150"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="sah-Zm-kW4"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IrH-KP-7CF">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0pp-RD-Sew">
+                        <rect key="frame" x="241.5" y="10" width="68.5" height="34"/>
+                        <color key="tintColor" red="0.8784313725490196" green="0.2627450980392157" blue="0.20784313725490194" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="See All"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="jbk-tI-luA" secondAttribute="trailing" constant="10" id="4cb-cr-RX3"/>
+                    <constraint firstItem="x1w-Ja-PeH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="7sD-bX-ntd"/>
+                    <constraint firstAttribute="trailing" secondItem="0pp-RD-Sew" secondAttribute="trailing" constant="10" id="Gws-Ic-7XX"/>
+                    <constraint firstItem="x1w-Ja-PeH" firstAttribute="top" secondItem="0pp-RD-Sew" secondAttribute="bottom" constant="10" id="L8k-m4-3PA"/>
+                    <constraint firstItem="x1w-Ja-PeH" firstAttribute="top" secondItem="jbk-tI-luA" secondAttribute="bottom" constant="10" id="VuG-Dm-lcS"/>
+                    <constraint firstAttribute="trailing" secondItem="x1w-Ja-PeH" secondAttribute="trailing" constant="10" id="XaO-gG-vdE"/>
+                    <constraint firstAttribute="bottom" secondItem="x1w-Ja-PeH" secondAttribute="bottom" constant="10" id="Ydu-gj-Cx9"/>
                     <constraint firstItem="jbk-tI-luA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="aOP-CC-Kw5"/>
+                    <constraint firstItem="0pp-RD-Sew" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="cAU-q8-sYS"/>
                     <constraint firstItem="jbk-tI-luA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="soR-WR-xjk"/>
+                    <constraint firstItem="0pp-RD-Sew" firstAttribute="leading" secondItem="jbk-tI-luA" secondAttribute="trailing" constant="15" id="xbx-li-86h"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="137.68115942028987" y="199.55357142857142"/>
+            <connections>
+                <outlet property="awardItemCollectionView" destination="x1w-Ja-PeH" id="7Ei-IN-dRS"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="214.95535714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
