Main ✅ Connect OnBoarding to Dashboard ✅ Add StoryboardID
OnBoarding
✅ Creating Model on Different Folder
✅ Adjustment from Hifid Revision
✅ Adding Content on First Page OnBoarding
✅ Adding hide keyboard function after click return or tap arround
✅ New Level Calculation System

--- a/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
+++ b/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
         <!--Today-->
         <scene sceneID="ZQU-ml-oLx">
             <objects>
-                <viewController id="hWR-xw-Yfy" customClass="ActivityViewController" customModule="WabiSabiTeamProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Dashboard" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hWR-xw-Yfy" customClass="ActivityViewController" customModule="WabiSabiTeamProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bef-mK-pzW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
