--- a/WabiSabiTeamProject/Feature/OnBoarding/View/OnBoarding.storyboard
+++ b/WabiSabiTeamProject/Feature/OnBoarding/View/OnBoarding.storyboard
@@ -24,8 +24,8 @@
                                     <constraint firstAttribute="width" secondItem="iGb-0z-Y6Q" secondAttribute="height" multiplier="1:1" id="Ri7-of-UXC"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus tortor sit amet nisl semper iaculis." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GvK-IK-jHp">
-                                <rect key="frame" x="50" y="538" width="314" height="55"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start your skin care journey with us! Plan and record your routine based on your own preference and skin. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GvK-IK-jHp">
+                                <rect key="frame" x="50" y="523" width="314" height="55"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -60,7 +60,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GrV-Z8-Ylt" secondAttribute="trailing" constant="50" id="VQr-YN-YwL"/>
                             <constraint firstItem="GvK-IK-jHp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="iRO-kv-jsn"/>
                             <constraint firstItem="iGb-0z-Y6Q" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="of1-Dj-X4K"/>
-                            <constraint firstItem="GvK-IK-jHp" firstAttribute="top" secondItem="GrV-Z8-Ylt" secondAttribute="bottom" constant="30" id="ogx-EM-40V"/>
+                            <constraint firstItem="GvK-IK-jHp" firstAttribute="top" secondItem="GrV-Z8-Ylt" secondAttribute="bottom" constant="15" id="ogx-EM-40V"/>
                             <constraint firstItem="GrV-Z8-Ylt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="50" id="tCk-GE-fcs"/>
                             <constraint firstItem="nIV-3Z-Vae" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="vNl-1N-bkM"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iGb-0z-Y6Q" secondAttribute="trailing" constant="30" id="vrb-Hq-VWr"/>
@@ -341,7 +341,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="next:" destination="7DN-xA-maY" eventType="touchUpInside" id="nRX-Xh-9fV"/>
-                                    <segue destination="utR-yB-9nj" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="mum-Nk-hqc"/>
+                                    <segue destination="utR-yB-9nj" kind="presentation" animates="NO" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="mum-Nk-hqc"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -403,7 +403,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qvH-ep-ZM8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="qvH-ep-ZM8">
                                 <rect key="frame" x="30" y="307" width="354" height="456"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -480,7 +480,7 @@
                                     <segue destination="sWg-rn-Die" kind="presentation" animates="NO" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="pWD-Pk-iUO"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check all that applies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBq-0C-bA6">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick the one that applies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBq-0C-bA6">
                                 <rect key="frame" x="30" y="280" width="354" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
@@ -1032,6 +1032,9 @@ products that you usually use later.</string>
                                         <integer key="value" value="25"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="getStarted:" destination="Odw-vj-ajS" eventType="touchUpInside" id="tiV-e0-EMJ"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ju-Im-88Q">
                                 <rect key="frame" x="107" y="237.5" width="200" height="27"/>
@@ -1241,7 +1244,7 @@ products that you usually use later.</string>
                                 <rect key="frame" x="30" y="209.5" width="354" height="652.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="skincareproductscell" rowHeight="150" translatesAutoresizingMaskIntoConstraints="NO" id="vvE-V0-7ta" customClass="SkinCareGuideTableViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="skincareproductscell" rowHeight="150" translatesAutoresizingMaskIntoConstraints="NO" id="vvE-V0-7ta" customClass="SkinCareGuideTableViewCell" customModule="WabiSabiTeamProject" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="44.5" width="354" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vvE-V0-7ta" id="pZ6-wg-VV8">
